# EIVolume

./: README.md  pyproject.toml
eivolume/paper/基于CSSA-LSTM的酒店预订数据分析与预测/: main.ipynb
eivolume/paper/基于机器学习的电缆故障检测和诊断方法/: main.ipynb
eivolume/paper/基于深度学习的酒店预订数据分析与预测/: main.ipynb
tests/: tensorflow.ipynb
