[tool.poetry]
name = "eivolume"
version = "0.1.0"
description = ""
authors = ["JamesCurtis <jamescurtis@foxmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
jupyterlab = "^3.6.3"
numpy = "~1.23"
pandas = "^2.0.1"
shap = "^0.41.0"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
catboost = "^1.2"
scikit-learn = "^1.2.2"
xgboost = "^1.7.5"
lightgbm = "^3.3.5"
statsmodels = "^0.14.0"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "2.10.0"
numba = "~0.56.4"
ipywidgets = "^8.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
